iss#238 Track Service: bulk update tags: refactor tag related functionality